Add leave endpoint
